tests/baselines/reference/anonymousModules.errors.txt
==== tests/cases/compiler/anonymousModules.ts (13 errors) ====
    module {
           ~
!!! error TS1005: ';' expected.
    ~~~~~~
!!! error TS2304: Cannot find name 'module'.
    	export var foo = 1;
    	~~~~~~
!!! error TS1129: Statement expected.
    	~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    
    	module {
    	       ~
!!! error TS1005: ';' expected.
    	~~~~~~
!!! error TS2304: Cannot find name 'module'.
    		export var bar = 1;
    		~~~~~~
!!! error TS1129: Statement expected.
    		           ~~~
!!! error TS2395: Individual declarations in merged declaration bar must be all exported or all local.
    	}
    	~
!!! error TS1128: Declaration or statement expected.
    
    	var bar = 2;
    	    ~~~
!!! error TS2395: Individual declarations in merged declaration bar must be all exported or all local.
    
    	module {
    	       ~
!!! error TS1005: ';' expected.
    	~~~~~~
!!! error TS2304: Cannot find name 'module'.
    		var x = bar;
    	}
    }
    ~
!!! error TS1128: Declaration or statement expected.